# dholuo-tts

./: .dockerignore  .gitignore  README.md  create_vits_metadata.py  dholuo_g2p.py  generate_lexicon.py  main.py  phonemizer.py  pos.py  preprocess_dhonam.py  process_audio.py  pyproject.toml  tagger.py  train_pos_cloud.py  train_pos_local.py  train_vits.py  transcribe_audio.py  unique_unk_finder.py  utils.py
api/: cache.py  config.py  inference.py  main.py  models.py  routes.py
demo/: app.py  components.py  examples.py  styles.css  visualizations.py
docker/: Dockerfile  Dockerfile.demo  docker-compose.yml
scripts/: launch_demo.sh  prepare_for_hf.sh  upload_models_to_hub.py  verify_demo.py
tests/: __init__.py  test_api.py  test_integration.py  test_model.py  test_phonemizer.py  test_phonemizer_with_tagger.py
